--- a/MovieAppRxCleanArchs/UI/Screens/MovieList/Cells/MovieListFullWidthCell/MovieListFullWidthCell.xib
+++ b/MovieAppRxCleanArchs/UI/Screens/MovieList/Cells/MovieListFullWidthCell/MovieListFullWidthCell.xib
@@ -24,17 +24,17 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wWf-By-rcl">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wWf-By-rcl">
                         <rect key="frame" x="12" y="40.5" width="120" height="120"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="120" id="dyq-8J-bQl"/>
                             <constraint firstAttribute="width" constant="120" id="ttM-DB-XbO"/>
                         </constraints>
                     </imageView>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Nir-pM-ZRj">
+                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="Nir-pM-ZRj">
                         <rect key="frame" x="140" y="40.5" width="217" height="20.5"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z1R-2k-9QZ">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z1R-2k-9QZ">
                                 <rect key="frame" x="0.0" y="0.0" width="217" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -51,15 +51,15 @@
                         <state key="normal" title="Button"/>
                         <buttonConfiguration key="configuration" style="plain" image="ic_star_small_blue"/>
                     </button>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Overview" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ul8-lK-UoY" userLabel="OverviewTitleLabel">
-                        <rect key="frame" x="140" y="69" width="71.5" height="20.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Overview" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ul8-lK-UoY" userLabel="OverviewTitleLabel">
+                        <rect key="frame" x="140" y="65" width="71.5" height="20.5"/>
                         <accessibility key="accessibilityConfiguration" identifier="OverviewTitleLabel"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Llp-tj-kdl" userLabel="OverviewLabel">
-                        <rect key="frame" x="140" y="97.5" width="259" height="20.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Llp-tj-kdl" userLabel="OverviewLabel">
+                        <rect key="frame" x="140" y="89.5" width="259" height="20.5"/>
                         <accessibility key="accessibilityConfiguration" identifier="OverviewTitleLabel"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
@@ -76,24 +76,24 @@
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
+                <constraint firstItem="Llp-tj-kdl" firstAttribute="leading" secondItem="Nir-pM-ZRj" secondAttribute="leading" id="5Bm-hi-Mjc"/>
                 <constraint firstAttribute="trailing" secondItem="Llp-tj-kdl" secondAttribute="trailing" constant="12" id="62o-Ix-Vbp"/>
                 <constraint firstItem="CX8-hT-4RG" firstAttribute="leading" secondItem="Nir-pM-ZRj" secondAttribute="trailing" priority="750" constant="12" id="7Wd-gI-GIn"/>
                 <constraint firstItem="ul8-lK-UoY" firstAttribute="leading" secondItem="Nir-pM-ZRj" secondAttribute="leading" id="DfM-KR-gx4"/>
-                <constraint firstItem="ul8-lK-UoY" firstAttribute="top" secondItem="Nir-pM-ZRj" secondAttribute="bottom" constant="8" id="EdG-gz-7xl"/>
+                <constraint firstItem="ul8-lK-UoY" firstAttribute="top" secondItem="Nir-pM-ZRj" secondAttribute="bottom" constant="4" id="EdG-gz-7xl"/>
                 <constraint firstAttribute="trailing" secondItem="yts-Yw-C9g" secondAttribute="trailing" constant="12" id="Ein-Yj-6cc"/>
                 <constraint firstAttribute="bottom" secondItem="hPG-oW-cXl" secondAttribute="bottom" id="FsC-ud-67U"/>
                 <constraint firstItem="wWf-By-rcl" firstAttribute="top" secondItem="yts-Yw-C9g" secondAttribute="bottom" constant="8" id="I61-aS-72s"/>
+                <constraint firstItem="Llp-tj-kdl" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="wWf-By-rcl" secondAttribute="bottom" id="Kcc-hx-uS8"/>
                 <constraint firstItem="yts-Yw-C9g" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="12" id="L0j-X4-Chf"/>
                 <constraint firstItem="hPG-oW-cXl" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="12" id="R3I-0U-fkP"/>
                 <constraint firstItem="wWf-By-rcl" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="12" id="Z68-rM-yEh"/>
                 <constraint firstItem="Nir-pM-ZRj" firstAttribute="top" secondItem="wWf-By-rcl" secondAttribute="top" id="ap9-Z8-jdB"/>
-                <constraint firstItem="Llp-tj-kdl" firstAttribute="bottom" relation="lessThanOrEqual" secondItem="wWf-By-rcl" secondAttribute="bottom" id="btM-B4-2AB"/>
                 <constraint firstItem="CX8-hT-4RG" firstAttribute="top" secondItem="Nir-pM-ZRj" secondAttribute="top" id="dcE-r6-rdk"/>
-                <constraint firstItem="Llp-tj-kdl" firstAttribute="leading" secondItem="z1R-2k-9QZ" secondAttribute="leading" id="etY-fa-fZB"/>
                 <constraint firstItem="Nir-pM-ZRj" firstAttribute="leading" secondItem="wWf-By-rcl" secondAttribute="trailing" constant="8" id="f1w-oI-UWi"/>
                 <constraint firstAttribute="trailing" secondItem="CX8-hT-4RG" secondAttribute="trailing" constant="12" id="hgj-GL-dnG"/>
                 <constraint firstAttribute="trailing" secondItem="hPG-oW-cXl" secondAttribute="trailing" id="sLg-34-8gc"/>
-                <constraint firstItem="Llp-tj-kdl" firstAttribute="top" secondItem="ul8-lK-UoY" secondAttribute="bottom" constant="8" id="sax-Zl-dXc"/>
+                <constraint firstItem="Llp-tj-kdl" firstAttribute="top" secondItem="ul8-lK-UoY" secondAttribute="bottom" constant="4" id="sax-Zl-dXc"/>
                 <constraint firstItem="yts-Yw-C9g" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="12" id="soV-u3-AoD"/>
             </constraints>
             <size key="customSize" width="411" height="186"/>
