--- a/MovieAppRxCleanArchs/UI/Screens/MovieList/Cells/MovieListHalfWidthCell/MovieListHalfWidthCell.xib
+++ b/MovieAppRxCleanArchs/UI/Screens/MovieList/Cells/MovieListHalfWidthCell/MovieListHalfWidthCell.xib
@@ -17,9 +17,9 @@
                 <rect key="frame" x="0.0" y="0.0" width="229" height="300"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wgC-96-qhR">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wgC-96-qhR">
                         <rect key="frame" x="0.0" y="0.0" width="229" height="229"/>
-                        <color key="backgroundColor" red="0.08235294118" green="0.54901960780000003" blue="0.1960784314" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="wgC-96-qhR" secondAttribute="height" multiplier="1:1" id="GOq-7C-Hbj"/>
                         </constraints>
